...
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>

        <item
            android:id="@+id/nav_product"
            android:title="@string/Product"
            android:icon="@drawable/product"/>
        <item
            android:id="@+id/nav_record"
            android:title="@string/Record"
            android:icon="@drawable/record"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:title="Help">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/Login"
                    android:icon="@drawable/login"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/Profile"
                    android:icon="@drawable/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout"/>
                <item
                    android:id="@+id/nav_setting"
                    android:title="@string/Setting"
                    android:icon="@drawable/settings"/>
...
